brat/test/golden/error/fanout-diff-types.brat.golden
Error in test/golden/error/fanout-diff-types.brat@2:5-13
f = { [/\] }
    ^^^^^^^^

  Type mismatch when checking [/\]
Expected: (b1 :: Bit)
But got:  (head :: Qubit)


